// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aggregate factories when attempting to build an instance of type: audioItem from a DTO when the DTO is valid valid transribed audio DTO should succeed 1`] = `
WithTranscription {
  "eventHistory": [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
  "lengthMilliseconds": 20000,
  "mediaItemId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "name": MultilingualText {
    "items": [
      MultilingualTextItem {
        "languageCode": "eng",
        "role": "original",
        "text": "The Wooden Boy",
      },
    ],
  },
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "transcript": Transcript {
    "items": [
      TranscriptItem {
        "inPoint": 12000,
        "outPoint": 15550,
        "speakerInitials": "JHC",
        "text": MultilingualText {
          "items": [
            MultilingualTextItem {
              "languageCode": "eng",
              "role": "original",
              "text": "There once was a little wooden boy.",
            },
          ],
        },
      },
      TranscriptItem {
        "inPoint": 18300,
        "outPoint": 19240,
        "speakerInitials": "JHC",
        "text": MultilingualText {
          "items": [
            MultilingualTextItem {
              "languageCode": "eng",
              "role": "original",
              "text": "His name was Pinocchio",
            },
          ],
        },
      },
    ],
    "participants": [
      TranscriptParticipant {
        "initials": "JHC",
        "name": "Jimmy H. Cricket",
      },
    ],
  },
  "type": "audioItem",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: bibliographicReference from a DTO when the DTO is valid valid dto for a BibliographicReference of sub-type: Book should succeed 1`] = `
BookBibliographicReference {
  "data": BookBibliographicReferenceData {
    "abstract": "This is the abstract, NOT a general note!",
    "creators": [
      {
        "name": "Alana Duvernay",
        "type": "author",
      },
      {
        "name": "James Smith",
        "type": "author",
      },
    ],
    "isbn": "978-1-895811-34-6",
    "numberOfPages": 455,
    "place": "Kennebunk Port, Maine",
    "publisher": "Atlantic Publishing",
    "title": "A Day in the Life",
    "type": "book",
    "url": "https://coscrad.org/wp-content/uploads/2023/05/mock-book-bibliographic-reference-1_a-day-in-the-life.pdf",
    "year": 1999,
  },
  "eventHistory": [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "type": "bibliographicReference",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: bibliographicReference from a DTO when the DTO is valid valid dto for a BibliographicReference of sub-type: Court Case should succeed 1`] = `
CourtCaseBibliographicReference {
  "data": CourtCaseBibliographicReferenceData {
    "abstract": "Doe, Jane
- Large Valley
- Qualifying as an expert in the written language",
    "caseName": "2002-07-08_NationTitleCase",
    "court": "Supreme Court of British Columbia",
    "dateDecided": "Recorded 2002-07-08",
    "pages": "Pages 1-6",
    "type": "courtCase",
    "url": "https://coscrad.org/wp-content/uploads/2023/05/mock-court-case-bibliographic-reference-3_title-case.pdf",
  },
  "eventHistory": [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "type": "bibliographicReference",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: bibliographicReference from a DTO when the DTO is valid valid dto for a BibliographicReference of sub-type: Journal Article should succeed 1`] = `
JournalArticleBibliographicReference {
  "data": JournalArticleBibliographicReferenceData {
    "abstract": "An analysis of the Cariboo Chilcotin Justice inquiry.",
    "creators": [
      BibliographicReferenceCreator {
        "name": "Sigurd Purcell",
        "type": "author",
      },
    ],
    "doi": "10.14288/bcs.v0i19.784",
    "issn": "00052949",
    "issueDate": "Spring 2013",
    "publicationTitle": "Journal of History",
    "title": "Report on the Cariboo Chilcotin Justice inquiry",
    "type": "journalArticle",
    "url": "https://coscrad.org/wp-content/uploads/2023/05/Test-Journal-Article-Sample-PDF.pdf",
  },
  "eventHistory": [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "type": "bibliographicReference",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: book from a DTO when the DTO is valid valid book should succeed 1`] = `
Book {
  "author": "John Doeburg",
  "eventHistory": [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
  "pages": [
    BookPage {
      "identifier": "1",
      "text": "foo",
      "translation": "dee foo",
    },
    BookPage {
      "identifier": "2",
      "text": "blah blah blah",
      "translation": "blahas",
    },
  ],
  "publicationDate": "2002",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "subtitle": "The wolf's revenge",
  "title": "Three Little Pigs",
  "type": "book",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: mediaItem from a DTO when the DTO is valid valid media item should succeed 1`] = `
MediaItem {
  "contributorAndRoles": [
    ContributorAndRole {
      "contributorId": "2",
      "role": "host",
    },
  ],
  "eventHistory": [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "lengthMilliseconds": 2500,
  "mimeType": "audio/x-wav",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "title": "episode title (in language)",
  "titleEnglish": "Metal Mondays episode 1",
  "type": "mediaItem",
  "url": "https://coscrad.org/wp-content/uploads/2023/05/metal-mondays-mock1_533847__tosha73__distortion-guitar-power-chord-e.wav",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: photograph from a DTO when the DTO is valid valid photograph should succeed 1`] = `
Photograph {
  "dimensions": PhotographDimensions {
    "heightPX": 400,
    "widthPX": 300,
  },
  "eventHistory": [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
  "imageUrl": "https://coscrad.org/wp-content/uploads/2023/05/Adiitsii-Running.png",
  "photographer": "Susie McRealart",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "type": "photograph",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: playlist from a DTO when the DTO is valid valid playlist DTO should succeed 1`] = `
Playlist {
  "eventHistory": [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
  "items": [
    PlaylistItem {
      "resourceCompositeIdentifier": {
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
        "type": "audioItem",
      },
    },
    PlaylistItem {
      "resourceCompositeIdentifier": {
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110111",
        "type": "audioItem",
      },
    },
  ],
  "name": MultilingualText {
    "items": [
      MultilingualTextItem {
        "languageCode": "clc",
        "role": "original",
        "text": "Blake's jams",
      },
    ],
  },
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "type": "playlist",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: song from a DTO when the DTO is valid valid song should succeed 1`] = `
Song {
  "audioURL": "https://coscrad.org/wp-content/uploads/2023/05/mock-song-1_mary-had-a-little-lamb.wav",
  "contributions": [
    ContributorAndRole {
      "contributorId": "1",
      "role": "performer",
    },
  ],
  "eventHistory": [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "lengthMilliseconds": 3500,
  "lyrics": "Mary had a little lamb, little lamb.",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "startMilliseconds": 0,
  "title": "Song title in language",
  "titleEnglish": "Mary had a little lamb",
  "type": "song",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: spatialFeature from a DTO when the DTO is valid valid dto for a Spatial Feature of sub-type: Line should succeed 1`] = `
Line {
  "eventHistory": [],
  "geometry": {
    "coordinates": [
      [
        52.3,
        -124.2,
      ],
      [
        52.35,
        -124.85,
      ],
      [
        52.21,
        -124.9,
      ],
      [
        52.05,
        -125.1,
      ],
      [
        52.15,
        -125.1,
      ],
      [
        52.33,
        -125.22,
      ],
      [
        52.45,
        -125.39,
      ],
    ],
    "type": "LineString",
  },
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "properties": SpatialFeatureProperties {
    "description": "One amazing hike!",
    "imageUrl": "https://coscrad.org/wp-content/uploads/2023/05/wind-energy-2029621_1280.png",
    "name": "Windy Path",
  },
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "type": "spatialFeature",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: spatialFeature from a DTO when the DTO is valid valid dto for a Spatial Feature of sub-type: Point should succeed 1`] = `
Point {
  "eventHistory": [],
  "geometry": {
    "coordinates": [
      54.034404852745006,
      -132.17563335558532,
    ],
    "type": "Point",
  },
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
  "properties": SpatialFeatureProperties {
    "description": "Description for point 100",
    "imageUrl": "https://coscrad.org/wp-content/uploads/2023/05/evergreen-2025158_1280.png",
    "name": "Name of Point with ID: 100",
  },
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "type": "spatialFeature",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: spatialFeature from a DTO when the DTO is valid valid dto for a Spatial Feature of sub-type: Polygon should succeed 1`] = `
Polygon {
  "eventHistory": [],
  "geometry": {
    "coordinates": [
      [
        [
          52.47,
          -123.6,
        ],
        [
          52.42,
          -123.95,
        ],
        [
          52.05,
          -123.95,
        ],
        [
          52.05,
          -123.685,
        ],
      ],
    ],
    "type": "Polygon",
  },
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110300",
  "properties": SpatialFeatureProperties {
    "description": "Description for polygon 300",
    "imageUrl": "https://coscrad.org/wp-content/uploads/2023/05/map-1272165_640.png",
    "name": "Point with ID: 300 Name",
  },
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "type": "spatialFeature",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: term from a DTO when the DTO is valid when the dto is valid should succeed 1`] = `
Term {
  "audioFilename": undefined,
  "contributorId": "John Doe",
  "eventHistory": [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "sourceProject": undefined,
  "term": "Chil-term-1",
  "termEnglish": "Engl-term-1",
  "type": "term",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: video from a DTO when the DTO is valid valid video DTO should succeed 1`] = `
WithTranscription {
  "eventHistory": [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
  "lengthMilliseconds": 20000,
  "mediaItemId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
  "name": MultilingualText {
    "items": [
      MultilingualTextItem {
        "languageCode": "eng",
        "role": "original",
        "text": "The Demonstration",
      },
    ],
  },
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "transcript": Transcript {
    "items": [
      TranscriptItem {
        "inPoint": 12000,
        "outPoint": 15550,
        "speakerInitials": "DM",
        "text": MultilingualText {
          "items": [
            MultilingualTextItem {
              "languageCode": "eng",
              "role": "original",
              "text": "This is how.",
            },
          ],
        },
      },
      TranscriptItem {
        "inPoint": 18300,
        "outPoint": 19240,
        "speakerInitials": "DM",
        "text": MultilingualText {
          "items": [
            MultilingualTextItem {
              "languageCode": "eng",
              "role": "original",
              "text": "It is done",
            },
          ],
        },
      },
    ],
    "participants": [
      TranscriptParticipant {
        "initials": "DM",
        "name": "Dee Monstrator",
      },
    ],
  },
  "type": "video",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: vocabularyList from a DTO when the DTO is valid valid vocabulary list should succeed 1`] = `
VocabularyList {
  "entries": [
    VocabularyListEntry {
      "termId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110511",
      "variableValues": {
        "person": "11",
        "positive": true,
      },
    },
    VocabularyListEntry {
      "termId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110512",
      "variableValues": {
        "person": "12",
        "positive": false,
      },
    },
    VocabularyListEntry {
      "termId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110513",
      "variableValues": {
        "person": "13",
        "positive": false,
      },
    },
    VocabularyListEntry {
      "termId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
      "variableValues": {
        "person": "01",
        "positive": true,
      },
    },
    VocabularyListEntry {
      "termId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110502",
      "variableValues": {
        "person": "02",
        "positive": false,
      },
    },
  ],
  "eventHistory": [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b114567",
  "name": "To Sing (lang)",
  "nameEnglish": "To Sing (Engl)",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": [],
    "allowedUserIds": [],
  },
  "type": "vocabularyList",
  "variables": [
    {
      "name": "positive",
      "type": "checkbox",
      "validValues": [
        {
          "display": "negative (lha)",
          "value": false,
        },
        {
          "display": "positive form (switch for negative)",
          "value": true,
        },
      ],
    },
    {
      "name": "person",
      "type": "dropbox",
      "validValues": [
        {
          "display": "I",
          "value": "1",
        },
        {
          "display": "You",
          "value": "2",
        },
        {
          "display": "She",
          "value": "3",
        },
      ],
    },
  ],
}
`;
